syntax = "proto3";

package serviciosCancion;
option go_package = "/serviciosCancion";

service SongService {
  rpc enviarGeneros() returns (ListaGeneros);
  rpc enviarCanciones() returns (ListaCanciones);
  rpc enviarCancion(peticionDTO) returns (Cancion);
}

message peticionDTO {
  string titulo = 1;
}

message Genero {
	int32 id = 1;
	string nombre = 2;
}

message Cancion {
	int32 id = 1;
  string titulo = 2;
  string artista = 3;
	int32 a√±o = 4;
	string duracion = 5;
	Genero genero = 6;
}

message ListaGeneros {
  repeated Genero generos = 1;
}

message ListaCanciones {
  repeated Cancion canciones = 1;
}